--- a/loja-le-lis-blanc.html
+++ b/loja-le-lis-blanc.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Shopping</title>
+    <title>Le Lis Blanc</title>
     <meta name="description" content="WebApp de exemplo">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
@@ -35,27 +35,41 @@
 <div class="current-page">
 
 
-<main class="home">
-	
-	<h1 class="z-depth-1">O Shopping</h1>
+<main class="loja">
 
-	<div class="collection z-depth-1">
-		<a href="lojas.html" class="collection-item waves-effect">
-			<i class="material-icons">card_giftcard</i>
-			Lojas &amp; Restaurantes
-		</a>	
-
-		<a href="pagar-estacionamento.html" class="collection-item waves-effect">
-			<i class="material-icons">directions_car</i>
-			Pagar estacionamento
+	<div class="parallax-container">
+		<a href="lojas.html">
+			<i class="material-icons waves-effect waves-light waves-circle">arrow_back</i>
 		</a>
 
-		<a href="https://github.com/sergiolopes/shopping" class="collection-item waves-effect" target="_blank">
-			<i class="material-icons">loyalty</i>
-			Código Fonte
-		</a>
+		<div class="parallax">
+			<img src="img/loja/le-lis-blanc.jpg" alt="Le Lis Blanc">
+		</div>
 	</div>
 
+	<div class="section white">
+		<div class="row container">
+			<h2 class="header">Le Lis Blanc</h2>
+			<p class="grey-text text-darken-3 lighten-3">Le Lis Blanc Deux é uma das principais empresas varejistas do setor de vestuário e acessórios de moda feminina de alto padrão no Brasil. A marca Le Lis Blanc está associada a produtos de alta qualidade e a um estilo de vida sofisticado e desejado. Os clientes são principalmente mulheres com alto poder aquisitivo, de diferentes faixas etárias, que procuram produtos elegantes e femininos, inspirados nas últimas tendências internacionais</p>
+		</div>
+	</div>
+
+	<div class="section amber lighten-5">
+		<div class="row container">
+			<p>Piso: <strong>2</strong></p>
+			<p>Número: <strong>233</strong></p>
+			<p>Funcionamento: <strong>10h - 22h</strong></p>
+			<p>Telefone: <strong>011-1406</strong></p>
+			<p>Email: <strong>contato@le-lis-blanc.com.br</strong></p>
+		</div>
+	</div>
+
+    <div class="fixed-action-btn">
+        <a class="btn-floating btn-large waves-effect waves-light amber darken-4"
+           href="tel:0111406">
+            <i class="material-icons">call</i>
+        </a>
+    </div>
 </main>
 
 </div><!--/.current-page-->
@@ -72,4 +86,3 @@
 
 </body>
 </html>
-
