--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <main class="home">
 	
-	<h1 class="z-depth-1">O Shopping</h1>
+	<h1 class="z-depth-1"> <a href='login.html'>ENTRAR</a></h1>
 
 	<div class="collection z-depth-1">
 		<a href="lojas.html" class="collection-item waves-effect">
